Fixed #3766 In the context menu, long labels with second level menu get wrapped.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3740 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/v2/menu.css
+++ b/_source/skins/v2/menu.css
@@ -159,3 +159,15 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	margin-left: 2px;
 	background-image: url(images/arrowleft.gif);
 }*/
+
+/* #3766 In the context menu, long labels with second level menu get wrapped */
+.cke_browser_ie .cke_skin_v2 .cke_menuarrow
+{
+	position: absolute;
+	right: 0;
+}
+
+.cke_browser_ie8.cke_browser_iequirks .cke_skin_v2 .cke_label
+{
+	height: 24px;
+}
